# shachi

./: Cargo.toml  README.md  justfile
src/: app.rs  camera.rs  fish.rs  main.rs  names.rs  orca.rs  sim.rs
src/ai/: hunger.rs  lifespan.rs  mod.rs  movement.rs
src/ui/: mod.rs
