[package]
name = "sakamata"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "orca whale simulation software"
repository = "https://github.com/sakamatawatch/sakamata"

[dependencies]
bevy = "0.8"
big-brain = { version = "0.12" }
iyes_loopless = { version = "0.7" }
bevy_bobs = { git = "https://github.com/HalfPixelStudios/bevy_bobs", features = ["physics_2d"] }

rand = { version = "0.8" }

