[package]
name = "sakamata"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "orca whale simulation software"
repository = "https://github.com/sakamatawatch/sakamata"

[dependencies]
bevy = "0.8"
big-brain = { version = "0.12" }
iyes_loopless = { version = "0.7" }
bevy_bobs = { git = "https://github.com/HalfPixelStudios/bevy_bobs", features = ["physics_2d"] }
bevy_egui = "0.16"
bevy_pancam = { version = "0.6", features = ["bevy_egui"] }
bevy_prototype_lyon = { version = "0.6" }
bevy_mod_picking = { version = "0.9" }

rand = { version = "0.8" }
pino_utils = { git = "https://github.com/MrPicklePinosaur/pino_utils" }
